# Judger

./: .gitignore  CMakeLists.txt  README.md  build.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build.yml
src/: argtable3.c  argtable3.h  child.c  child.h  killer.c  killer.h  logger.c  logger.h  main.c  runner.c  runner.h
